--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="https://twitter.com/rosexw" target="_blank" class="social-media-link">
           <img src="assets/social_media/twitter-logo.svg" alt="Twitter Icon" class="social-media-icon">
         </a>
-        <a href="https://theworldthroughroseseyes.wordpress.com/" target="_blank" class="social-media-link">
+        <a href="https://rosexw.wordpress.com/" target="_blank" class="social-media-link">
           <img src="1488782757_globe.svg" alt="Web Icon" class="social-media-icon">
         </a>
         <a href="mailto:rose.wan@me.com" target="_blank" class="social-media-link">
