--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <section id="Technical_Skills">
             <p><h2>TECHNICAL SKILLS:</h2></p>
             <ul>
-              <li>HTML5/CSS3</li>
+              <li>HTML5/CSS3, JavaScript, NodeJS, MongoDB, React, Angular </li>
               <li>Microsoft Office(Excel, Access, PowerPoint, Word, Project, and Outlook)</li>
               <li>WordPress Content Management System</li>
               <li>Hootsuite, Buffer</li>
@@ -77,6 +77,11 @@
           <section id="Education">
             <p><h2>EDUCATION</h2></p>
             <div class="education_section">
+              <b>Web Development</b>
+                <ul>
+                  <li>Lighthouse Labs</li>
+                  <li>Certificate, 2017</li>
+                </ul>
               <b>Global Business Management</b>
                 <ul>
                   <li>Humber College Institute of Technology and Advanced Learning</li>
