--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://rosexw.wordpress.com/" target="_blank" class="social-media-link">
           <img src="1488782757_globe.svg" alt="Web Icon" class="social-media-icon">
         </a>
-        <a href="mailto:rose.wan@me.com" target="_blank" class="social-media-link">
+        <a href="mailto:email" target="_blank" class="social-media-link">
           <img src="assets/social_media/mail-black-envelope-symbol.svg" alt="Mail Icon" class="social-media-icon">
         </a>
 
